# ytlist

./: .gitignore  AGENTS.md  BRANCHING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_OPEN_SOURCE_RELEASE.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
