[package]
name = "ytlist"
version = "0.1.0"
edition = "2021"
description = "Extract all video URLs from a YouTube playlist in order"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-cli = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }
anyhow           = "1"
